[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Zombie.gd" type="Script" id=1]
[ext_resource path="res://assets/zombie1_Animation_3_2/zombie1_Animation 3_2.png" type="Texture" id=2]
[ext_resource path="res://assets/zombie1_Animation_3_2/zombie1_Animation 3_0.png" type="Texture" id=4]
[ext_resource path="res://assets/zombie1_Animation_3_2/zombie1_Animation 3_1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.33119, 8.59135 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90.3172, 56.6217 )

[node name="Zombie" type="Area2D" groups=[
"zombie",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision"]
position = Vector2( 45, 0 )
shape = SubResource( 3 )

[node name="rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 25, -50 )

[node name="RayCast2D2" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 25, 50 )

[node name="RayCast2D3" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 75, -15 )

[node name="RayCast2D4" type="RayCast2D" parent="rays"]
enabled = true
cast_to = Vector2( 70, 15 )

[connection signal="body_entered" from="." to="." method="_on_Boid_body_entered"]
[connection signal="area_entered" from="vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="vision" to="." method="_on_vision_area_exited"]
